cabal-version:       2.2
name:                imgui-haskell
version:             0.1.0.0
license-file:        LICENSE
author:              Andrea Bedini
maintainer:          andrea@andreabedini.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


Flag LoaderGlew
  Description:  Use GLEW loader
  Default:      True
  Manual:       True

library
  build-depends:       base >=4.13 && <4.15
                     , GLFW-b
                     , bindings-GLFW
  exposed-modules:     ImGui
                     , ImGui.Internal.Bindings
                     , ImGui.Internal.GLFW
  default-language:    Haskell2010
  cxx-sources:         cimgui/cimgui.cpp
                     , cimgui/imgui/imgui.cpp
                     , cimgui/imgui/imgui_draw.cpp
                     , cimgui/imgui/imgui_demo.cpp
                     , cimgui/imgui/imgui_widgets.cpp
                     , cimgui/imgui/examples/imgui_impl_opengl3.cpp
                     , cimgui/imgui/examples/imgui_impl_glfw.cpp
  cxx-options:         -g -Wall
                       "-DIMGUI_IMPL_API=extern \"C\""
                       -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS=1
  if flag(LoaderGlew)
    cxx-options:       -DIMGUI_IMPL_OPENGL_LOADER_GLEW
    exposed-modules:   Graphics.UI.GLEW
    extra-libraries:   GLEW

  extra-libraries:     c++
  include-dirs:        cimgui
                     , cimgui/generator/output
                     , cimgui/imgui
  build-tool-depends:  c2hs:c2hs
  ghc-options:         -Wall

executable test
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.15
                     , imgui-haskell
                     , GLFW-b
                     , OpenGL
  default-language:    Haskell2010
  extra-libraries:     c++
